added POST request (front + back)

--- a/ejs/features.ejs
+++ b/ejs/features.ejs
@@ -9,6 +9,13 @@
         <h1>Features Page</h1>
 
         <div id="app">
+            <form @submit.prevent="createServer">
+                <div class="mb-3">
+                    <input class="form-control" type="text" v-model="name">
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+
             <div class="spinner-border" role="status" v-if="servers.length === 0">
                 <span class="visually-hidden">Loading...</span>
             </div>
