--- a/ejs/features.ejs
+++ b/ejs/features.ejs
@@ -21,7 +21,7 @@
             </div>
 
             <ul class="list-group" v-else>
-                <li class="list-group-item" v-for="server in servers">
+                <li class="list-group-item" v-for="server in servers" @click="remove(server.id)">
                     {{ server.name }}
                     <strong>{{ server.status }}</strong>
                 </li>
